src/styles/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
}

@font-face {
  font-family: 'BobsBurgers';
  src: url("fonts/Bob's\ Burgers.woff") format('woff'),
    url("fonts/Bob's\ Burgers.ttf") format('truetype');
}

.header {
  font-family: 'BobsBurgers' !important;
}

.sidebar {
  width: 15%;
  background-color: #f4f4f4;
  min-height: 90vh;
}

.main-content {
  width: 85%;
}

@media only screen and (max-width: 768px) {
  .sidebar {
    width: 25%;
    display: none;
  }

  .main-content {
    width: 100%;
    padding: 1rem;
  }
}

.info-box {
  background-color: rgba(59, 153, 252, 0.05);
  border-color: #3b99fc;
  padding: 1.5em;
  border-left: 0.2em solid #3b99fc;
}

.info-box .title {
  color: #3b99fc;
  font-size: 18px;
  font-weight: 800;
  margin: 0;
  outline: none;
  padding: 0;
}

pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  word-break: break-all;
  word-wrap: break-word;
  color: #3a3f44;
  background-color: #f5f5f5;
  border: 1px solid #cccccc;
  border-radius: 4px;
}

a {
  text-decoration: none !important;
}

